@@ -1,4 +1,4 @@
-.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.8.0m1"
+.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.8.0m2"
 .SH NAME
 phoronix-test-suite \- The Phoronix Test Suite is an extensible open-source platform for performing testing and performance evaluation.
 .SH SYNOPSIS
@@ -47,6 +47,9 @@ This option will permanently remove a installed test by the Phoronix Test Suite.
 .SH TESTING
 .B benchmark [Test | Suite | OpenBenchmarking ID | Test Result]  ...
 This option will install the selected test(s) (if needed) and will proceed to run the test(s). This option is equivalent to running phoronix-test-suite with the install option followed by the run option. Multiple arguments can be supplied to run additional tests at the same time and save the results into one file.
+.TP
+.B estimate-install-time [Test | Suite | OpenBenchmarking ID | Test Result]
+This option will provide estimates for test install/setup time length.
 .TP
 .B estimate-run-time [Test | Suite | OpenBenchmarking ID | Test Result]
 This option will provide estimates for test run-time / length.
