@@ -44,6 +44,9 @@
 <h3>benchmark<em>  [Test | Suite | OpenBenchmarking ID | Test Result]  ...</em>
 </h3>
 <p>This option will install the selected test(s) (if needed) and will proceed to run the test(s). This option is equivalent to running phoronix-test-suite with the install option followed by the run option. Multiple arguments can be supplied to run additional tests at the same time and save the results into one file.</p>
+<h3>estimate-install-time<em>  [Test | Suite | OpenBenchmarking ID | Test Result]</em>
+</h3>
+<p>This option will provide estimates for test install/setup time length.</p>
 <h3>estimate-run-time<em>  [Test | Suite | OpenBenchmarking ID | Test Result]</em>
 </h3>
 <p>This option will provide estimates for test run-time / length.</p>
