@@ -294,9 +294,9 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '9.8.0m1');
-pts_define('PTS_CORE_VERSION', 9710);
-pts_define('PTS_RELEASE_DATE', '20200603');
+pts_define('PTS_VERSION', '9.8.0m2');
+pts_define('PTS_CORE_VERSION', 9720);
+pts_define('PTS_RELEASE_DATE', '20200624');
 pts_define('PTS_CODENAME', 'Nesodden');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
